Fix DiffTools spaces visibility

--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,7 @@ textarea.dark {
 .form-check-inline.custom-control{
   display: inline;
 }
+
+div.diff{
+  white-space:pre;
+}
